syntax = "proto3";
package ncs.service.user.money.v1;
option go_package = "backend/app/service/user/money/api/grpc/v1";

import "google/api/annotations.proto";

message GetReq {
    int64 uid = 1;
}

message GetResp {
    int64 uid = 1;
    int32 money = 2;
}

message PayReq {
    int64 uid = 1;
    int32 price = 2;
    string reason = 3;
}

message PayResp {
}

message GiveReq {
    int64 uid = 1;
    int32 money = 2;
    string reason = 3;
}

message GiveResp {
}

message Record {
    int64 timestamp = 1;
    int32 amount = 2;
    string reason = 3;
}

message RecordsReq {
    int64 uid = 1;
    uint32 days = 2;
}

message RecordsResp {
    repeated Record records = 1;
}

message GiftReq {
    uint64 uid = 1;
    uint64 target = 2;
    uint32 money = 3;
}

message GiftResp {
    uint32 remaining = 1;
}

service Money {
    rpc Get (GetReq) returns (GetResp) {
        option (google.api.http) = {
            get: "/user/money/{uid}"
        };
    }
    rpc Pay (PayReq) returns (PayResp) {
        option (google.api.http) = {
            post: "/user/money/{uid}/pay"
            body: "*"
        };
    }
    rpc Give (GiveReq) returns (GiveResp) {
        option (google.api.http) = {
            post: "/user/money/{uid}/give"
            body: "*"
        };
    }
    rpc Records (RecordsReq) returns (RecordsResp) {
        option (google.api.http) = {
            get: "/user/money/{uid}/records/{days}"
        };
    }
    rpc Gift (GiftReq) returns (GiftResp) {
        option (google.api.http) = {
            post: "/user/money/{uid}/gift"
            body: "*"
        };
    }
}